test 2 correction contrast ratio

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -2097,6 +2097,7 @@ pre code {
     display: flex;
     align-items: center;
     height: 48px;
+    font-weight: 600;
 }
 
 .col-xs-1,
